optimized to ASW3 -- tentative

--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/4/6"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/4/10"
    ]
   },
   {
@@ -80,11 +80,11 @@
    "outputs": [],
    "source": [
     "# *** Plot dump ***\n",
-    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 2                           # 0: no-dump  1:plot dump  2:comparison for operation\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
@@ -133,6 +133,7 @@
     "# date='20230713';  ver = 'V03'\n",
     "# date='20240125';  ver = 'V02'\n",
     "# date='20240822';  ver = 'V02'   # CAL\n",
+    "# date='20250331';  ver = 'V01'   # CAL\n",
     "date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
@@ -189,31 +190,8 @@
     "print(\"           data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"  Length:\", n_samp0, \"]\")\n",
     "print(\"         Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")\n",
     "print(\"f, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[n0]), 'stop {:5d} '.format(data.B0_stopf[n0]), 'step {:3d} '.format(data.B0_step[n0]), 'repeat {:2d} '.format(data.B0_repeat[n0]),  'subdiv {:2d}'.format(data.B0_subdiv[n0]), ) \n",
-    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[n0]), 'stop {:5d} '.format(data.B1_stopf[n0]), 'step {:3d} '.format(data.B1_step[n0]), 'repeat {:2d} '.format(data.B1_repeat[n0]),  'subdiv {:2d}'.format(data.B1_subdiv[n0]), ) \n",
-    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[n0]), 'stop {:5d} '.format(data.B2_stopf[n0]), 'step {:3d} '.format(data.B2_step[n0]), 'repeat {:2d} '.format(data.B2_repeat[n0]),  'subdiv {:2d}'.format(data.B2_subdiv[n0]), ) \n",
-    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[n0]), 'stop {:5d} '.format(data.B3_stopf[n0]), 'step {:3d} '.format(data.B3_step[n0]), 'repeat {:2d} '.format(data.B3_repeat[n0]),  'subdiv {:2d}'.format(data.B3_subdiv[n0]), ) \n",
-    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[n0]), 'stop {:5d} '.format(data.B4_stopf[n0]), 'step {:3d} '.format(data.B4_step[n0]), 'repeat {:2d} '.format(data.B4_repeat[n0]),  'subdiv {:2d}'.format(data.B4_subdiv[n0]), ) \n",
-    "\n",
     "#\n",
     "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "639cdaae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "import csv\n",
-    "with open(\"sid2-f-org.csv\", 'w') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    for i in range(n_freq0):\n",
-    "        writer.writerow([ i, data.frequency[1][i][0], data.freq_width[1][i][0], data.freq_step[1][i][0]])\n",
-    "print(n_freq0, data.frequency.shape)\n",
-    "\"\"\""
    ]
   },
   {
@@ -264,13 +242,13 @@
    "outputs": [],
    "source": [
     "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
-    "print(\"Peak Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str_unit)\n",
-    "print(\"Peak Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str_unit)\n",
-    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str_unit)\n",
+    "print(\"Peak Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
+    "print(\"Peak Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
+    "print(\"Peak Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)\n",
     "if unit_mode==0:\n",
-    "    print(\"Peak Eu:\", '{:x}'.format(np.int64(np.amax(wave.Eu_i))), ' {:x}'.format(np.int64(np.amax(wave.Eu_q))), wave.str_unit)\n",
-    "    print(\"Peak Ev:\", '{:x}'.format(np.int64(np.amax(wave.Ev_i))), ' {:x}'.format(np.int64(np.amax(wave.Ev_q))), wave.str_unit)\n",
-    "    print(\"Peak Ew:\", '{:x}'.format(np.int64(np.amax(wave.Ew_i))), ' {:x}'.format(np.int64(np.amax(wave.Ew_q))), wave.str_unit)"
+    "    print(\"Peak Eu:\", '{:x}'.format(np.int64(np.nanmax(wave.Eu_i))), ' {:x}'.format(np.int64(np.nanmax(wave.Eu_q))), wave.str_unit)\n",
+    "    print(\"Peak Ev:\", '{:x}'.format(np.int64(np.nanmax(wave.Ev_i))), ' {:x}'.format(np.int64(np.nanmax(wave.Ev_q))), wave.str_unit)\n",
+    "    print(\"Peak Ew:\", '{:x}'.format(np.int64(np.nanmax(wave.Ew_i))), ' {:x}'.format(np.int64(np.nanmax(wave.Ew_q))), wave.str_unit)"
    ]
   },
   {
@@ -290,7 +268,6 @@
     "ax4.plot(np.ravel(data.frequency),     '-b', linewidth=.5,  label='Frequency')\n",
     "ax4.plot(np.ravel(data.freq_step*10),  '-g', linewidth=0.8, label='step*10')\n",
     "ax4.plot(np.ravel(data.freq_width*10), ':b', linewidth=1.0, label='width*10')\n",
-    "ax4.plot(np.ravel(data.sweep_start)*data.frequency[0][-1][0], '-r', linewidth=.5, label='Sweep Start')\n",
     "ax5.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)');  ax5.plot(np.ravel(data.T_RWI_CH1),     ':b', label='T (RWI1)');  \n",
     "ax5.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)');     ax5.plot(np.ravel(data.cal_signal*10), '-k', label='CAL-Singal')\n",
     "ax6.plot(np.ravel(data.epoch[:]), '.')\n",
@@ -303,7 +280,7 @@
     "\n",
     "xlim=[-0.5, len(np.ravel(data.Eu_i[:][:])) -0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
     "xlim=[-0.5, n_time0                        -0.5];  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
-    "p_max = np.ceil(np.log10(np.amax([np.amax(wave.Eu_i), np.amax(wave.Eu_q), np.amax(wave.Ev_i), np.amax(wave.Ev_q), np.amax(wave.Ew_i), np.amax(wave.Ew_q)]))*5)/5\n",
+    "p_max = np.ceil(np.log10(np.nanmax([np.nanmax(wave.Eu_i), np.nanmax(wave.Eu_q), np.nanmax(wave.Ev_i), np.nanmax(wave.Ev_q), np.nanmax(wave.Ew_i), np.nanmax(wave.Ew_q)]))*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)];  ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min1, f_max1];             ax4.set_ylim(ylim)\n",
     "\n",
@@ -341,7 +318,6 @@
     "ax4.plot(np.ravel(data.frequency[n_sweep0:n_sweep1]),     '-b', linewidth=.5,  label='Frequency')\n",
     "ax4.plot(np.ravel(data.freq_step[n_sweep0:n_sweep1]*10),  '-g', linewidth=0.8, label='step*10')\n",
     "ax4.plot(np.ravel(data.freq_width[n_sweep0:n_sweep1]*10), ':b', linewidth=1.0, label='width*10')\n",
-    "ax4.plot(np.ravel(data.sweep_start[n_sweep0:n_sweep1])*data.frequency[n_sweep0][-1][0], '-r', label='Sweep Start')\n",
     "ax5.plot(np.ravel(data.epoch[n_sweep0:n_sweep1+1]), '.')\n",
     "\n",
     "date1 = data.epoch[n_sweep0];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax5.set_xlabel(date1)\n",
@@ -352,7 +328,7 @@
     "\n",
     "xlim=[-0.5, len(np.ravel(data.Eu_i[n_sweep0:n_sweep1])) -0.5]; ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
     "xlim=[-0.5, num_sweep                                   -0.5]; ax5.set_xlim(xlim)\n",
-    "p_max = np.ceil(np.log10( np.amax( [np.amax(wave.Eu_i[n_sweep0:n_sweep1]), np.amax(wave.Eu_q[n_sweep0:n_sweep1]), np.amax(wave.Ev_i[n_sweep0:n_sweep1]), np.amax(wave.Ev_q[n_sweep0:n_sweep1]), np.amax(wave.Ew_i[n_sweep0:n_sweep1]), np.amax(wave.Ew_q[n_sweep0:n_sweep1])] ) )*5)/5\n",
+    "p_max = np.ceil(np.log10( np.nanmax( [np.nanmax(wave.Eu_i[n_sweep0:n_sweep1]), np.nanmax(wave.Eu_q[n_sweep0:n_sweep1]), np.nanmax(wave.Ev_i[n_sweep0:n_sweep1]), np.nanmax(wave.Ev_q[n_sweep0:n_sweep1]), np.nanmax(wave.Ew_i[n_sweep0:n_sweep1]), np.nanmax(wave.Ew_q[n_sweep0:n_sweep1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min, f_max]; ax4.set_ylim(ylim)\n",
     "\n",
@@ -385,7 +361,6 @@
     "ax2.plot(np.ravel(wave.Ev_i[n_sweep][n_step0:n_step1]), '-r', linewidth=.5, label='Ev_i');  ax2.plot(np.ravel(wave.Ev_q[n_sweep][n_step0:n_step1]), ':g', linewidth=.5, label='Ev_q')\n",
     "ax3.plot(np.ravel(wave.Ew_i[n_sweep][n_step0:n_step1]), '-r', linewidth=.5, label='Ew_i');  ax3.plot(np.ravel(wave.Ew_q[n_sweep][n_step0:n_step1]), ':g', linewidth=.5, label='Ew_q')\n",
     "ax4.plot(np.ravel(data.frequency[n_sweep][n_step0:n_step1]),     '-b', linewidth=.5, label='Frequency')\n",
-    "ax4.plot(np.ravel(data.sweep_start[n_sweep][n_step0:n_step1])*data.frequency[n_sweep][n_step1][0], '-r', label='Sweep Start')\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date1)\n",
     "ax1.set_ylabel('Eu '+wave.str_unit);  ax2.set_ylabel('Ev '+wave.str_unit);  ax3.set_ylabel('Ew '+wave.str_unit);  ax4.set_ylabel('Frequency [kHz]');  \n",
@@ -394,7 +369,7 @@
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "xlim=[-0.5, len(np.ravel(data.Eu_i[n_sweep][n_step0:n_step1])) -0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
-    "p_max = np.ceil(np.log10( np.amax( [np.amax(wave.Eu_i[n_sweep][n_step0:n_step1]), np.amax(wave.Eu_q[n_sweep][n_step0:n_step1]), np.amax(wave.Ev_i[n_sweep][n_step0:n_step1]), np.amax(wave.Ev_q[n_sweep][n_step0:n_step1]), np.amax(wave.Ew_i[n_sweep][n_step0:n_step1]), np.amax(wave.Ew_q[n_sweep][n_step0:n_step1])] ) )*5)/5\n",
+    "p_max = np.ceil(np.log10( np.nanmax( [np.nanmax(wave.Eu_i[n_sweep][n_step0:n_step1]), np.nanmax(wave.Eu_q[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ev_i[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ev_q[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ew_i[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ew_q[n_sweep][n_step0:n_step1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -443,23 +418,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51392467",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "import csv\n",
-    "with open(\"sid2-f.csv\", 'w') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    for i in range(n_freq1):\n",
-    "        writer.writerow([ i, freq_1d[i], freq_w_1d[i]])\n",
-    "print(n_freq1, spec.freq.shape)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1ef68d16",
    "metadata": {},
    "outputs": [],
@@ -486,9 +444,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Peak   Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str_unit)\n",
-    "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str_unit)\n",
-    "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str_unit)\n",
+    "print(\"Peak   Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
+    "print(\"Peak   Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
+    "print(\"Peak   Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)\n",
     "#\n",
     "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)\n",
@@ -527,7 +485,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = 0;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "while np.isnan(np.ravel(spec.EuEu[n_sweep1][0])):\n",
+    "    n_sweep1 += 1\n",
+    "while np.isnan(np.ravel(spec.EuEu[n_sweep2][0])):\n",
+    "    n_sweep2 += 1\n",
+    "while np.isnan(np.ravel(spec.EuEu[n_sweep3][0])):\n",
+    "    n_sweep3 -= 1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e} V2 '.format(peak_E[peak_f]), '{:.2e} V '.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
@@ -595,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 1540;  f_max = 1560\n",
@@ -684,7 +648,7 @@
     "ax1.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_spec2.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec2-log.png'\n",
@@ -698,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = 0;       f_max = 5000\n",
     "\n",
@@ -813,7 +777,7 @@
     "\n",
     "plt.subplots_adjust(hspace=.03)\n",
     "plt.show\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_FT.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
@@ -965,7 +929,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "# p_min = -15;     p_max = -10\n",
     "f_min = f_min0;  f_max = f_max0\n",
@@ -1019,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = 3*n_time1//4\n",
+    "n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = 3*n_time1//4\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = 0;       f_max = 5000\n",
     "\n",
@@ -1082,14 +1046,14 @@
    "outputs": [],
    "source": [
     "p_min = p_min1;  p_max = p_max1\n",
-    "# p_min = -15;     p_max = -10\n",
+    "p_min = -16;     p_max = -10\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "# f_min = 80;      f_max = 2068\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  \n",
     "\n",
-    "fig = plt.figure(figsize=(14, 4))\n",
-    "# fig = plt.figure(figsize=(8, 6))\n",
+    "# fig = plt.figure(figsize=(14, 11))\n",
+    "fig = plt.figure(figsize=(8, 6))\n",
     "ax1 = fig.add_subplot(1, 1, 1)\n",
     "#ax1.plot(freq_1d,     EuEu_med, ':r', linewidth=1, label='EuEu ave')\n",
     "#ax1.plot(freq_1d,     EvEv_med, ':g', linewidth=1, label='EvEv ave')\n",
@@ -1108,7 +1072,7 @@
     "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "\n",
     "fig.show\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'-msk_spec2.png'\n",
     "    fig.savefig(png_fname)"
    ]
@@ -1314,7 +1278,7 @@
    "outputs": [],
    "source": [
     "if sid3_sim > 0:\n",
-    "    n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "    n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "    p_min = p_min1;  p_max = p_max1\n",
     "    f_min = f_min0;  f_max = f_max0\n",
     "    if f_mode == 0:\n",
@@ -1387,7 +1351,7 @@
    "outputs": [],
    "source": [
     "if sid3_sim > 0:\n",
-    "    n_sweep1 = n_time1//4;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "    n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "    p_min = p_min1;  p_max = p_max1\n",
     "    f_min = f_min0;  f_max = f_max0\n",
     "    if f_mode == 0:\n",
@@ -1745,7 +1709,7 @@
    "outputs": [],
    "source": [
     "if sid4_sim > 0:\n",
-    "    n_sweep1 = 0;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "    n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "    p_min = p_min1;          p_max = p_max1\n",
     "    f_min = freq_1d_sid[0];  f_max = freq_1d_sid[-1]\n",
     "\n",
@@ -1876,7 +1840,7 @@
    "outputs": [],
    "source": [
     "if sid5_sim > 0:\n",
-    "    n_sweep1 = 0;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
+    "    n_sweep1 = 1;  n_sweep2 = n_time1//2;  n_sweep3 = n_time1-1\n",
     "    p_min = p_min1;  p_max = p_max1\n",
     "    f_min = freq_1d_sid[0];  f_max = freq_1d_sid[-1]\n",
     "    if f_mode == 0:\n",
