--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -261,9 +261,9 @@
    "outputs": [],
    "source": [
     "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
-    "print(\"Peak Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str_unit)\n",
-    "print(\"Peak Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str_unit)\n",
-    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str_unit)"
+    "print(\"Peak Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
+    "print(\"Peak Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
+    "print(\"Peak Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)"
    ]
   },
   {
@@ -295,7 +295,7 @@
     "\n",
     "xlim=[-0.5, len(np.ravel(data.Eu_i[:][:])) -0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
     "xlim=[-0.5, n_time0                        -0.5];  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
-    "p_max = np.ceil(np.log10(np.amax([np.amax(wave.Eu_i), np.amax(wave.Eu_q), np.amax(wave.Ev_i), np.amax(wave.Ev_q), np.amax(wave.Ew_i), np.amax(wave.Ew_q)]))*5)/5\n",
+    "p_max = np.ceil(np.log10(np.nanmax([np.nanmax(wave.Eu_i), np.nanmax(wave.Eu_q), np.nanmax(wave.Ev_i), np.nanmax(wave.Ev_q), np.nanmax(wave.Ew_i), np.nanmax(wave.Ew_q)]))*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)];  ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min1, f_max1];             ax4.set_ylim(ylim)\n",
     "\n",
@@ -344,7 +344,7 @@
     "xlim=[-0.5, len(np.ravel(data.Eu_i[n_sweep0:n_sweep1])) -0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
     "xlim=[-0.5, num_sweep                                   -0.5];  ax5.set_xlim(xlim)\n",
     "# range: Y-axis\n",
-    "p_max = np.ceil(np.log10( np.amax( [np.amax(wave.Eu_i[n_sweep0:n_sweep1]), np.amax(wave.Eu_q[n_sweep0:n_sweep1]), np.amax(wave.Ev_i[n_sweep0:n_sweep1]), np.amax(wave.Ev_q[n_sweep0:n_sweep1]), np.amax(wave.Ew_i[n_sweep0:n_sweep1]), np.amax(wave.Ew_q[n_sweep0:n_sweep1])] ) )*5)/5\n",
+    "p_max = np.ceil(np.log10( np.nanmax( [np.nanmax(wave.Eu_i[n_sweep0:n_sweep1]), np.nanmax(wave.Eu_q[n_sweep0:n_sweep1]), np.nanmax(wave.Ev_i[n_sweep0:n_sweep1]), np.nanmax(wave.Ev_q[n_sweep0:n_sweep1]), np.nanmax(wave.Ew_i[n_sweep0:n_sweep1]), np.nanmax(wave.Ew_q[n_sweep0:n_sweep1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min, f_max]; ax4.set_ylim(ylim)\n",
     "\n",
@@ -389,7 +389,7 @@
     "# range: X-axis\n",
     "xlim=[-0.5, len(np.ravel(data.Eu_i[n_sweep][n_step0:n_step1])) -0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
     "# range: Y-axis\n",
-    "p_max = np.ceil(np.log10( np.amax( [np.amax(wave.Eu_i[n_sweep][n_step0:n_step1]), np.amax(wave.Eu_q[n_sweep][n_step0:n_step1]), np.amax(wave.Ev_i[n_sweep][n_step0:n_step1]), np.amax(wave.Ev_q[n_sweep][n_step0:n_step1]), np.amax(wave.Ew_i[n_sweep][n_step0:n_step1]), np.amax(wave.Ew_q[n_sweep][n_step0:n_step1])] ) )*5)/5\n",
+    "p_max = np.ceil(np.log10( np.nanmax( [np.nanmax(wave.Eu_i[n_sweep][n_step0:n_step1]), np.nanmax(wave.Eu_q[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ev_i[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ev_q[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ew_i[n_sweep][n_step0:n_step1]), np.nanmax(wave.Ew_q[n_sweep][n_step0:n_step1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
