--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/3/31"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/6/30"
    ]
   },
   {
@@ -25,13 +25,10 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "import datetime\n",
-    "import glob\n",
-    "import matplotlib.colors as colors\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys\n",
-    "\n",
+    "import matplotlib.colors as colors\n",
+    "import matplotlib.pyplot as plt\n",
     "from matplotlib import gridspec"
    ]
   },
@@ -40,7 +37,7 @@
    "id": "1f5e8c0c",
    "metadata": {},
    "source": [
-    "# CDF and Directory setting: set by User"
+    "# Library setting"
    ]
   },
   {
@@ -60,6 +57,7 @@
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
+    "import juice_sid23_data as juice_data\n",
     "import juice_sid23_lib as juice_sid23\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -70,7 +68,7 @@
    "id": "578b15bb",
    "metadata": {},
    "source": [
-    "# Setting and Read CDF file: set by User"
+    "# Mode seting"
    ]
   },
   {
@@ -106,8 +104,16 @@
    "source": [
     "RIME_mode = 0                           # [RIME rejection]  0: n/a  1: RIME reject\n",
     "RFI_mode  = 0                           # [RFI  rejection]  0: n/a  1: 200kHz reject\n",
-    "f_min     = 0                           # [Frequency sel]   max - min\n",
+    "f_min     = 0000                        # [Frequency sel]   max - min\n",
     "f_max     = 45000                       # [Frequency sel]   max - min"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a186ded",
+   "metadata": {},
+   "source": [
+    "# get CDF data"
    ]
   },
   {
@@ -118,95 +124,15 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/'\n",
-    "# 202401\n",
-    "data_name_list = ['2024/01/26/JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf',    # 1.5MHz\n",
-    "                  '2024/01/26/JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf',    # 1.5MHz\n",
-    "                  ]\n",
-    "\"\"\"\n",
-    "# 202407 -- CO2\n",
-    "data_name_list = ['2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf',\n",
-    "                  '2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf',\n",
-    "                  '2024/07/06/JUICE_L1a_RPWI-HF-SID23_20240706T130407_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "# 202408 -- LEGA\n",
-    "data_name_list = ['2024/08/19/JUICE_L1a_RPWI-HF-SID23_20240819T210319_V01.cdf',\n",
-    "                  '2024/08/19/JUICE_L1a_RPWI-HF-SID23_20240819T211916_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "data_name_list = ['2024/08/22/JUICE_L1a_RPWI-HF-SID23_20240822T024109_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d556f41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** Ground Test - Ver.2 ***\n",
-    "# 202310 -- SAMPLE\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample-ASW2/cdf/old/'\n",
-    "data_name_list = ['SID23_20231024-0011.ccs.cdf',\n",
-    "                  #'SID23_20231024-0024.ccs.cdf',    # 0/0/10mVpp \n",
-    "                  #'SID23_20231024-0034.ccs.cdf',    # 0/0/10mVpp\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "# 202311 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name_list = ['SID23_Seq07.cdf',\n",
-    "                  'SID23_Seq08.cdf',\n",
-    "                  'SID23_Seq09.cdf',\n",
-    "                 ]\n",
-    "# 202405 -- dryrun check\n",
-    "# TEST\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
-    "                 ]\n",
-    "# LGA\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T060822-20000108T061002_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T062605-20000108T062725_V01___TMIDX_00003.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
-    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
-    "                 ]\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f873fab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** Group read\n",
-    "\"\"\"\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'\n",
-    "data_name = 'SID23*.cdf'\n",
-    "cdf_file = data_dir + data_name\n",
-    "data_name_list = glob.glob(cdf_file)\n",
-    "num_list = len(data_name_list)\n",
-    "data_name_list.sort()\n",
-    "for i in range(num_list):\n",
-    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "093823c4",
-   "metadata": {},
-   "source": [
-    "# get CDF data"
+    "# date='20240126';  ver = 'V02'\n",
+    "# date='20240706';  ver = 'V02'\n",
+    "# date='20240819';  ver = 'V02'\n",
+    "# date='20240821';  ver = 'V02'\n",
+    "\n",
+    "# *** Ground test data ***\n",
+    "date='0';  ver = 'V02'\n",
+    "\n",
+    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -235,47 +161,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2362875",
+   "id": "d78fc7f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cdflib import cdfread\n",
-    "cdf = cdfread.CDF(cdf_file)\n",
-    "globalaAttrs = cdf.globalattsget()\n",
-    "data.RPWI_FSW_version = globalaAttrs.get(\"RPWI_FSW_version\", \"Unknown\")\n",
-    "data.RPWI_FSW_version = data.RPWI_FSW_version[0]\n",
-    "print(\"ASW:\", data.RPWI_FSW_version)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cceae58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = juice_sid23.hf_sid23_shaping(data, f_max, f_min)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e5eee04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "data = juice_sid23.hf_sid23_shaping(data, f_max, f_min)\n",
+    "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2\n",
     "\n",
     "n_time0 = data.n_time;  n_block0 = data.time.shape[1];  n_length0 = data.time.shape[2]\n",
     "n_num0  = n_block0 * n_length0 \n",
-    "N_ch0   = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "\n",
     "print(\"       date and time:\", str_date)\n",
     "print(\"           data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Block:\", n_block0, \" * Length:\", n_length0, \" = Num:\", n_num0, \"]\")\n",
     "print(\"         time_length:\", data.time.shape, \"  [\", data.time[0][0][n_length0-1], data.time[0][1][0], \"sec in 1-block\", data.time[0][n_block0-1][n_length0-1], \"sec in total\")\n",
-    "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")"
+    "print(\"                  Ch:\", data.ch_selected[0])"
    ]
   },
   {
@@ -486,9 +388,9 @@
    "outputs": [],
    "source": [
     "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
-    "print(\"Peak Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str_unit)\n",
-    "print(\"Peak Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str_unit)\n",
-    "print(\"Peak Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str_unit)"
+    "print(\"Peak Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
+    "print(\"Peak Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
+    "print(\"Peak Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)"
    ]
   },
   {
@@ -738,9 +640,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Peak   Eu:\", '{:.2e}'.format(np.amax(wave.Eu_i)), ' {:.2e}'.format(np.amax(wave.Eu_q)), wave.str_unit)\n",
-    "print(\"Peak   Ev:\", '{:.2e}'.format(np.amax(wave.Ev_i)), ' {:.2e}'.format(np.amax(wave.Ev_q)), wave.str_unit)\n",
-    "print(\"Peak   Ew:\", '{:.2e}'.format(np.amax(wave.Ew_i)), ' {:.2e}'.format(np.amax(wave.Ew_q)), wave.str_unit)\n",
+    "print(\"Peak   Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
+    "print(\"Peak   Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
+    "print(\"Peak   Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)\n",
     "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)\n",
     "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)\n",
     "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)"
@@ -999,7 +901,7 @@
    "source": [
     "n_sweep = 0;  f_min = spec.freq[n_sweep][0][0];  f_max = spec.freq[n_sweep][0][-1]; d_freq = spec.freq[n_sweep][0][1]-spec.freq[n_sweep][0][0]\n",
     "p_min = p_min1-2;  p_max = p_max1\n",
-    "p_min = -15;       p_max = -12\n",
+    "p_min = -15.5;       p_max = -12\n",
     "\n",
     "freq_1d = spec.freq[n_time0//2][0]\n",
     "#\n",
