--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -75,11 +75,11 @@
    "outputs": [],
    "source": [
     "# *** Dump ***\n",
-    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -142,8 +142,9 @@
     "# date='20240820';  ver = 'V02'\n",
     "# date='20240822';  ver = 'V02'   # CAL\n",
     "# date='20240823';  ver = 'V02'\n",
-    "# date='20240909';  ver = 'V02'\n",
-    "date='0';         ver = 'V02'   # Test data\n",
+    "date='20240909';  ver = 'V02'\n",
+    "# date='20250331';  ver = 'V02'\n",
+    "# date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -262,14 +263,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e938a2",
+   "id": "9f7b4444",
    "metadata": {},
    "outputs": [],
    "source": [
     "spec = copy.deepcopy(data)\n",
     "spec = juice_cal.spec_cal(spec,   3, unit_mode, band_mode, T_HF, T_RWI)     # CAL\n",
-    "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw\n",
-    "\n",
+    "spec.EE = spec.EuEu + spec.EvEv + spec.EwEw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e938a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Epoch_1d  = spec.epoch.tolist();      n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
     "freq_1d   = spec.freq  [n_time1//2];  n_freq1 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
     "freq_w_1d = spec.freq_w[n_time1//2]\n",
@@ -391,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = n_time0//10;  n_sweep2 = n_time0//3;  n_sweep3 = n_time0-1\n",
+    "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
     "print(f\"[First peak - {n_sweep1}]\")\n",
     "peak_E = np.ravel(spec.EuEu[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
     "peak_E = np.ravel(spec.EvEv[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, '{:.2e}'.format(peak_E[peak_f]**.5), '{:.1f} kHz'.format(freq_1d[peak_f]))\n",
@@ -805,6 +814,7 @@
     "else:\n",
     "    ax1 = fig.add_subplot(2, 1, 1);  ax7 = fig.add_subplot(2, 1, 2)\n",
     "\n",
+    "ax1.plot(np.ravel(spec.EE[n_time]),         '-y', linewidth=2.5, label='EE')\n",
     "ax1.plot(np.ravel(spec.EuEu[n_time]),       '-r', linewidth=1.2, label='uu')\n",
     "ax1.plot(np.ravel(spec.EvEv[n_time]),       '-g', linewidth=0.8, label='vv')\n",
     "ax1.plot(np.ravel(spec.EwEw[n_time]),       '-b', linewidth=0.5, label='ww')\n",
@@ -1220,12 +1230,15 @@
     "else:\n",
     "    ax1 = fig.add_subplot(1, 1, 1)\n",
     "\n",
+    "ax1.plot(freq_1d, spec.EuEu[n0], ':y',  linewidth=2.0, label='EE init')\n",
     "ax1.plot(freq_1d, spec.EuEu[n0], ':r',  linewidth=1.0, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EvEv[n0], ':g',  linewidth=0.8, label='vv init')\n",
     "ax1.plot(freq_1d, spec.EwEw[n0], ':b',  linewidth=0.6, label='ww init')\n",
+    "ax1.plot(freq_1d, spec.EuEu[n1], '-.y', linewidth=2.0, label='EE half')\n",
     "ax1.plot(freq_1d, spec.EuEu[n1], '-.r', linewidth=1.0, label='uu half')\n",
     "ax1.plot(freq_1d, spec.EvEv[n1], '-.g', linewidth=0.8, label='vv half')\n",
     "ax1.plot(freq_1d, spec.EwEw[n1], '-.b', linewidth=0.6, label='ww half')\n",
+    "ax1.plot(freq_1d, spec.EE[n2],   '-y',  linewidth=2.0, label='EE end')\n",
     "ax1.plot(freq_1d, spec.EuEu[n2], '-r',  linewidth=1.0, label='uu end')\n",
     "ax1.plot(freq_1d, spec.EvEv[n2], '-g',  linewidth=0.8, label='vv end')\n",
     "ax1.plot(freq_1d, spec.EwEw[n2], '-b',  linewidth=0.6, label='ww end')\n",
@@ -1313,12 +1326,15 @@
     "#ax1.plot(freq_1d, EuEu_med,      '-r',  linewidth=0.5, label='EuEu_med')\n",
     "#ax1.plot(freq_1d, EvEv_med,      '-g',  linewidth=0.5, label='EvEv_med')\n",
     "#ax1.plot(freq_1d, EwEw_med,      '-b',  linewidth=0.5, label='EwEw_med')\n",
+    "ax1.plot(freq_1d, spec.EE[n0],   '-.y',  linewidth=0.5, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EuEu[n0], '-.r',  linewidth=0.5, label='uu init')\n",
     "ax1.plot(freq_1d, spec.EvEv[n0], '-.g',  linewidth=0.5, label='vv init')\n",
     "ax1.plot(freq_1d, spec.EwEw[n0], '-.b',  linewidth=0.5, label='ww init')\n",
+    "ax1.plot(freq_1d, spec.EE[n1],   '-y', linewidth=2.0, label='uu half')\n",
     "ax1.plot(freq_1d, spec.EuEu[n1], '-r', linewidth=2.0, label='uu half')\n",
     "ax1.plot(freq_1d, spec.EvEv[n1], '-g', linewidth=2.0, label='vv half')\n",
     "ax1.plot(freq_1d, spec.EwEw[n1], '-b', linewidth=2.0, label='ww half')\n",
+    "ax1.plot(freq_1d, spec.EE[n2],   ':y',  linewidth=2.0, label='uu end')\n",
     "ax1.plot(freq_1d, spec.EuEu[n2], ':r',  linewidth=2.0, label='uu end')\n",
     "ax1.plot(freq_1d, spec.EvEv[n2], ':g',  linewidth=2.0, label='vv end')\n",
     "ax1.plot(freq_1d, spec.EwEw[n2], ':b',  linewidth=2.0, label='ww end')\n",
@@ -1339,7 +1355,7 @@
     "ax1.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_spec2.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec2-log.png'\n",
@@ -1364,12 +1380,13 @@
     "p_min = p_min0;  p_max = p_max0\n",
     "# p_min = -14.5;     p_max = -13.5\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "# f_min = 300;     f_max = 3000\n",
+    "f_min = 100;     f_max = 2000\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "num_1d = np.arange(n_time0)\n",
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
+    "# fig2d = plt.figure(figsize=[8,6])\n",
     "if time_mode == 1:\n",
     "    ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2);  ax3 = fig2d.add_subplot(4, 1, 3); ax4 = fig2d.add_subplot(4, 1, 4)\n",
     "    ax4.set_xlabel(str_date)\n",
@@ -1411,7 +1428,7 @@
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=0.02);  plt.show()\n",
-    "if dump_mode < 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_FT.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
@@ -1633,7 +1650,7 @@
     "\n",
     "if time_mode == 1:\n",
     "    p1 = ax1.pcolormesh(num_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
-    "    p2 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
+    "    p2 = ax2.plot(np.ravel(data.epoch[:]), '.')\n",
     "    pp1 = fig2d.colorbar(p1, ax=ax2, orientation=\"vertical\"); pp1.set_label(spec.str_unit)\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
@@ -1653,7 +1670,7 @@
     "ax1.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=0.02);  plt.show()\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_FT2.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT2-log.png'\n",
@@ -2394,8 +2411,9 @@
    "source": [
     "# FT & Cir\n",
     "p_min = p_min0;  p_max = p_max0\n",
+    "p_min = -15.5;     p_max = -12\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "f_min = 80;      f_max = 1000\n",
+    "# f_min = 80;      f_max = 1000\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
@@ -2688,7 +2706,7 @@
     "\n",
     "if time_mode == 1:\n",
     "    p1 = ax1.pcolormesh(num_1d, freq_1d, EE_c_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
-    "    p2 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
+    "    p2 = ax2.plot(np.ravel(data.epoch[:]), '.')\n",
     "    pp1 = fig2d.colorbar(p1, ax=ax2, orientation=\"vertical\"); pp1.set_label(spec.str_unit)\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
@@ -2697,7 +2715,7 @@
     "print( \"(\", num_1d[0],\")\", Epoch_1d[0], \"-\", \"(\", num_1d[-1],\")\", Epoch_1d[-1] )\n",
     "if time_mode == 1:\n",
     "    xlim=[num_1d[0], num_1d[-1]]\n",
-    "    ax4.set_xlim(xlim)\n",
+    "    ax2.set_xlim(xlim)\n",
     "else:\n",
     "    if t_min0==0:\n",
     "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
