--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst) for ASW1/2/3: L1a QL -- 2025/4/6"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/6/24"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "id": "1f5e8c0c",
    "metadata": {},
    "source": [
-    "# CDF and Directory setting: set by User"
+    "# Library setting"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "578b15bb",
    "metadata": {},
    "source": [
-    "# Setting and Read CDF file: set by User"
+    "# Mode seting"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "# *** Power range ***\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
@@ -136,12 +136,11 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "# date='20240126'\n",
-    "# date='20240706'\n",
-    "# date='20240819'\n",
-    "date='0'\n",
-    "ver = 'V02'\n",
-    "sid = 4\n",
+    "# date='20240126';  ver = 'V02'\n",
+    "# date='20240706';  ver = 'V02'\n",
+    "date='20240819';  ver = 'V02'\n",
+    "# date='0';  ver = 'V02'\n",
+    "sid = 20\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -781,7 +780,7 @@
    "source": [
     "f_min = f_min0;  f_max = f_max0\n",
     "p_min = p_min0;  p_max = p_max0\n",
-    "p_min = -15.0;   p_max = -12\n",
+    "# p_min = -15.0;   p_max = -12\n",
     "num_1d = np.arange(EuEu_2d.shape[1])\n",
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
@@ -843,9 +842,9 @@
    "source": [
     "# FT & Cir\n",
     "p_min = p_min0;  p_max = p_max0\n",
-    "# p_min = -15;     p_max = -11\n",
+    "p_min = -15.5;     p_max = -12\n",
     "f_min = f_min0;  f_max = f_max0\n",
-    "# f_min = 80;     f_max = 600\n",
+    "f_min = 100;     f_max = 600\n",
     "\n",
     "# fig2d = plt.figure(figsize=[16,11])\n",
     "fig2d = plt.figure(figsize=[8,8])\n",
@@ -879,8 +878,8 @@
     "        xlim=[t_min0, t_max0]\n",
     "    # E_min = '2024-08-19 20:30:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    # E_max = '2024-08-19 20:37:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
-    "    # E_min = '2024-08-19 21:05:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    # E_max = '2024-08-19 21:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
+    "    E_min = '2024-08-19 21:05:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-08-19 21:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  xlim=[t_min, t_max]\n",
     "    print(\"==>\", xlim)\n",
     "ax1.set_xlim(xlim);  ax2.set_xlim(xlim)\n",
     "\n",
