--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -79,14 +79,14 @@
    "outputs": [],
    "source": [
     "# *** Dump ***\n",
-    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "# *** Power range ***\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
@@ -123,8 +123,8 @@
    "outputs": [],
    "source": [
     "# date='20240909'\n",
-    "date='0'\n",
-    "ver = 'V02'\n",
+    "# date='20250331'; ver = 'V02'\n",
+    "date='0'; ver = 'V02'\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -469,7 +469,7 @@
     "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_spec.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_spec-log.png'\n",
@@ -516,7 +516,7 @@
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(spec.str_unit)\n",
     "\n",
     "plt.show()\n",
-    "if dump_mode == 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_FT.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
